# cmake-CPP-template

./: CMakeLists.txt
Project_Name/: CMakeLists.txt
Project_Name/src/: CMakeLists.txt
Project_Name/src/app/: CMakeLists.txt  main.cpp
Project_Name/src/libs/: CMakeLists.txt
Project_Name/src/libs/dynamic_lib/: CMakeLists.txt
Project_Name/src/libs/dynamic_lib/include/: sortingLib.hpp
Project_Name/src/libs/dynamic_lib/src/: sortingLib.cpp
Project_Name/src/libs/static_lib/: CMakeLists.txt
Project_Name/src/libs/static_lib/include/: filesLib.hpp
Project_Name/src/libs/static_lib/src/: filesLib.cpp
Project_Name/src/tests/: CMakeLists.txt  tests.cpp
Project_Name/src/tests/docs/: testCase5.txt
